# ooasm

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ooasm.cpp  parse.hpp
src/: cli.hpp  ooasm.cpp  parse.hpp  parser.hpp  x86.hpp
tests/: CMakeLists.txt  test1.asm  test_cli.hpp  test_parser.hpp  test_x86.hpp  unit_tests.cpp
